add list data kategori & bahan with pagination
