# docs/swagger.json
@@ -5,6 +5,40 @@
     },
     "paths": {
         "/api/v1/bahan": {
+            "get": {
+                "description": "Return data master bahan with pagination.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "bahan"
+                ],
+                "summary": "Get all data bahan.",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "page number",
+                        "name": "page",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "limit number",
+                        "name": "limit",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/utils.Response"
+                        }
+                    }
+                }
+            },
             "post": {
                 "description": "Create a new master data bahan.",
                 "produces": [
@@ -298,6 +332,9 @@
                 "data": {},
                 "meta": {
                     "$ref": "#/definitions/utils.Meta"
+                },
+                "total_list": {
+                    "type": "integer"
                 }
             }
         }
